Add /etc/mime.types to static
This should apply the file to all images

Signed-off-by: Appu Goundan <appu@google.com>

--- a/base/testdata/static.yaml
+++ b/base/testdata/static.yaml
@@ -4,3 +4,7 @@ commandTests:
 - name: certs
   command: ["/check_certs"]
   exitCode: 0
+fileExistenceTests:
+- name: mime-types
+  path: '/etc/mime.types'
+  shouldExist: true
