--- a/private/repos/deb/deb.MODULE.bazel
+++ b/private/repos/deb/deb.MODULE.bazel
@@ -16,6 +16,9 @@ apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
         manifest = "//private/repos/deb:{}.yaml".format(repo),
         package_template = "//private/repos/deb:package.BUILD.tmpl",
         resolve_transitive = False,
+        ### TODO: trixie should add merged-usr support. It's added to rules_distroless but not released yet.
+        ### Once released, bump the version and enable the following line.
+        # mergedusr = repo == "trixie",
     )
     for repo in REPOS
 ]
