--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,6 +13,7 @@ bazel_dep(name = "container_structure_test", version = "1.16.0")
 bazel_dep(name = "rules_oci", version = "1.7.5")
 bazel_dep(name = "rules_distroless", version = "0.3.8")
 bazel_dep(name = "rules_python", version = "0.35.0")
+bazel_dep(name = "rules_cc", version = "0.2.0")
 
 ### OCI ###
 oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
