Apply fix to properly include previous distro

--- a/base/BUILD
+++ b/base/BUILD
@@ -1,9 +1,9 @@
 load(":base.bzl", "base_images")
-load(":distro.bzl", "DISTROS")
+load(":distro.bzl", "DISTROS", "PREVIEW_DISTROS")
 
 package(default_visibility = ["//visibility:public"])
 
 [
     base_images(distro = distro)
-    for distro in DISTROS
+    for distro in DISTROS + PREVIEW_DISTROS
 ]
