--- a/common/BUILD.bazel
+++ b/common/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@aspect_bazel_lib//lib:tar.bzl", "tar")
 load("@rules_distroless//distroless:defs.bzl", "cacerts", "group", "home", "locale", "os_release", "passwd")
 load("//:checksums.bzl", "ARCHITECTURES", "VERSIONS")
-load("//base:distro.bzl", "DISTROS")
+load("//base:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
 load("//private/util:deb.bzl", "deb")
 load(":variables.bzl", "MTIME", "NOBODY", "NONROOT", "OS_RELEASE", "ROOT", "quote")
 
@@ -53,7 +53,7 @@ tar(
         time = MTIME,
     )
     for arch in ARCHITECTURES
-    for distro in DISTROS
+    for distro in DISTROS + PREVIEW_DISTROS
 ]
 
 [
@@ -63,7 +63,7 @@ tar(
         time = MTIME,
     )
     for arch in ARCHITECTURES
-    for distro in DISTROS
+    for distro in DISTROS + PREVIEW_DISTROS
 ]
 
 # create /etc/group with the root, tty, and staff groups
