--- a/private/repos/java_temurin/java.MODULE.bazel
+++ b/private/repos/java_temurin/java.MODULE.bazel
@@ -1,6 +1,7 @@
 "repositories for java"
 
 include("//private/repos/java_temurin:java_17.MODULE.bazel")
+
 include("//private/repos/java_temurin:java_21.MODULE.bazel")
 
 java = use_extension("//private/extensions:java.bzl", "java")
@@ -18,5 +19,5 @@ use_repo(
     "temurin21_jdk_ppc64le",
     "temurin21_jre_amd64",
     "temurin21_jre_arm64",
-    "temurin21_jre_ppc64le"
+    "temurin21_jre_ppc64le",
 )
