feat: add riscv64 architecture

--- a/java/BUILD
+++ b/java/BUILD
@@ -2,6 +2,7 @@ load("@container_structure_test//:defs.bzl", "container_structure_test")
 load("@java_versions//:versions.bzl", "JAVA_RELEASE_VERSIONS")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
+load("//:checksums.bzl", "BASE_ARCHITECTURES")
 load("//base:distro.bzl", "DISTROS")
 load("//java:jre_ver.bzl", "jre_ver")
 load("//private/oci:defs.bzl", "java_image")
@@ -15,15 +16,28 @@ USERS = [
     "nonroot",
 ]
 
-JAVA_ARCHITECTURES = [
-    "amd64",
-    "arm64",
+JAVA_OPENJDK_ARCHITECTURES = BASE_ARCHITECTURES + [
     "s390x",
     "ppc64le",
 ]
 
-JAVA_VERSIONS_PER_DISTRO = [
+JAVA_OPENJDK_VERSIONS_PER_DISTRO = [
     ("17", "debian12"),
+]
+
+# Temurin related variables
+JAVA_TEMURIN_ARCHITECTURES = JAVA_OPENJDK_ARCHITECTURES + [
+    "riscv64",
+]
+
+JAVA_TEMURIN_VERSIONS = [
+    "21",
+    "25",
+]
+
+JAVA_TEMURIN_VERSIONS_PER_DISTRO = [
+    ("21", "debian12"),
+    ("25", "debian13"),
 ]
 
 [
@@ -32,7 +46,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         archive = "//common:cacerts_" + distro + "_" + arch,
     )
     for distro in DISTROS
-    for arch in JAVA_ARCHITECTURES
+    for arch in JAVA_OPENJDK_ARCHITECTURES
 ]
 
 [
@@ -49,8 +63,8 @@ JAVA_VERSIONS_PER_DISTRO = [
             ),
         ],
     )
-    for arch in JAVA_ARCHITECTURES
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for arch in JAVA_OPENJDK_ARCHITECTURES
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
 # special case for java 21 and 25, we will start using temurin, the goal is to slowly transition all builds
@@ -65,8 +79,8 @@ JAVA_VERSIONS_PER_DISTRO = [
             "@temurin" + java_version + "_jre_" + arch,
         ],
     )
-    for arch in JAVA_ARCHITECTURES
-    for java_version in ["21", "25"]
+    for arch in JAVA_TEMURIN_ARCHITECTURES
+    for java_version in JAVA_TEMURIN_VERSIONS
 ]
 
 [
@@ -79,8 +93,8 @@ JAVA_VERSIONS_PER_DISTRO = [
             "@temurin" + java_version + "_jdk_" + arch,
         ],
     )
-    for arch in JAVA_ARCHITECTURES
-    for java_version in ["21", "25"]
+    for arch in JAVA_TEMURIN_ARCHITECTURES
+    for java_version in JAVA_TEMURIN_VERSIONS
 ]
 
 # Base
@@ -89,7 +103,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         name = "java_base" + mode + "_" + user + "_" + distro,
         images = [
             "java_base" + mode + "_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_ARCHITECTURES
+            for arch in JAVA_OPENJDK_ARCHITECTURES
         ],
     )
     for mode in [
@@ -133,7 +147,7 @@ JAVA_VERSIONS_PER_DISTRO = [
     ]
     for user in USERS
     for distro in DISTROS
-    for arch in JAVA_ARCHITECTURES
+    for arch in JAVA_OPENJDK_ARCHITECTURES
 ]
 
 [
@@ -155,7 +169,7 @@ JAVA_VERSIONS_PER_DISTRO = [
     ]
     for user in USERS
     for distro in DISTROS
-    for arch in JAVA_ARCHITECTURES
+    for arch in JAVA_OPENJDK_ARCHITECTURES
 ]
 
 # Java JRE Headless
@@ -164,11 +178,11 @@ JAVA_VERSIONS_PER_DISTRO = [
         name = "java" + java_version + "_" + user + "_" + distro,
         images = [
             "java" + java_version + "_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_ARCHITECTURES
+            for arch in JAVA_OPENJDK_ARCHITECTURES
         ],
     )
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -192,9 +206,9 @@ JAVA_VERSIONS_PER_DISTRO = [
             ":openjdk_jre_headless_" + java_version + "_" + arch + "_" + distro,
         ],
     )
-    for arch in JAVA_ARCHITECTURES
+    for arch in JAVA_OPENJDK_ARCHITECTURES
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
 # Java JRE Headless - Debug
@@ -203,11 +217,11 @@ JAVA_VERSIONS_PER_DISTRO = [
         name = "java" + java_version + "_debug_" + user + "_" + distro,
         images = [
             "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_ARCHITECTURES
+            for arch in JAVA_OPENJDK_ARCHITECTURES
         ],
     )
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -237,8 +251,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         ],
     )
     for user in USERS
-    for arch in JAVA_ARCHITECTURES
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for arch in JAVA_OPENJDK_ARCHITECTURES
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
 # Temurin Java 21 & 25
@@ -247,11 +261,11 @@ JAVA_VERSIONS_PER_DISTRO = [
         name = "java" + java_version + "_" + user + "_" + distro,
         images = [
             "java" + java_version + "_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_ARCHITECTURES
+            for arch in JAVA_TEMURIN_ARCHITECTURES
         ],
     )
     for user in USERS
-    for java_version, distro in [("21", "debian12"), ("25", "debian13")]
+    for java_version, distro in JAVA_TEMURIN_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -271,9 +285,9 @@ JAVA_VERSIONS_PER_DISTRO = [
             ":temurin_jre_" + java_version + "_" + arch,
         ],
     )
-    for arch in JAVA_ARCHITECTURES
+    for arch in JAVA_TEMURIN_ARCHITECTURES
     for user in USERS
-    for java_version, distro in [("21", "debian12"), ("25", "debian13")]
+    for java_version, distro in JAVA_TEMURIN_VERSIONS_PER_DISTRO
 ]
 
 # Temurin Java 21 & 25 Debug
@@ -282,11 +296,11 @@ JAVA_VERSIONS_PER_DISTRO = [
         name = "java" + java_version + "_debug_" + user + "_" + distro,
         images = [
             "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_ARCHITECTURES
+            for arch in JAVA_TEMURIN_ARCHITECTURES
         ],
     )
     for user in USERS
-    for java_version, distro in [("21", "debian12"), ("25", "debian13")]
+    for java_version, distro in JAVA_TEMURIN_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -307,8 +321,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         ],
     )
     for user in USERS
-    for arch in JAVA_ARCHITECTURES
-    for java_version, distro in [("21", "debian12"), ("25", "debian13")]
+    for arch in JAVA_TEMURIN_ARCHITECTURES
+    for java_version, distro in JAVA_TEMURIN_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -325,7 +339,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         "",
         "_debug",
     ]
-    for arch in JAVA_ARCHITECTURES
+    for arch in JAVA_OPENJDK_ARCHITECTURES
     for user in USERS
     for distro in DISTROS
 ]
@@ -341,8 +355,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         ],
     )
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO + [("21", "debian12"), ("25", "debian13")]
-    for arch in JAVA_ARCHITECTURES
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO + JAVA_TEMURIN_VERSIONS_PER_DISTRO
+    for arch in JAVA_OPENJDK_ARCHITECTURES
 ]
 
 [
@@ -356,8 +370,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         ],
     )
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO + [("21", "debian12") , ("25", "debian13")]
-    for arch in JAVA_ARCHITECTURES
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO + JAVA_TEMURIN_VERSIONS_PER_DISTRO
+    for arch in JAVA_OPENJDK_ARCHITECTURES
 ]
 
 RULE_NAMES = [
