--- a/private/repos/deb/deb.MODULE.bazel
+++ b/private/repos/deb/deb.MODULE.bazel
@@ -2,6 +2,7 @@
 
 REPOS = [
     "trixie",
+    "trixie_java",
     "bookworm",
     "bookworm_java",
     "bookworm_python",
@@ -23,7 +24,7 @@ apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
     for repo in REPOS
 ]
 
-use_repo(apt, "bookworm", "bookworm_java", "bookworm_python", "trixie")
+use_repo(apt, "bookworm", "bookworm_java", "bookworm_python", "trixie", "trixie_java")
 
 ### VERSIONS HUB REPO ###
 version = use_extension("//private/extensions:version.bzl", "version")
