Add cc builds for debian13
Signed-off-by: Appu Goundan <appu@google.com>

--- a/cc/BUILD
+++ b/cc/BUILD
@@ -1,9 +1,14 @@
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
 load("//:checksums.bzl", "ARCHITECTURES")
-load("//base:distro.bzl", "DISTROS")
+load("//base:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
 load("//private/util:deb.bzl", "deb")
 
 package(default_visibility = ["//visibility:public"])
+
+GCC_BASE = {
+    "debian12": "gcc-12-base",
+    "debian13": "gcc-14-base",
+}
 
 # An image for C/C++ programs
 [
@@ -22,7 +27,7 @@ package(default_visibility = ["//visibility:public"])
         "root",
         "nonroot",
     ]
-    for distro in DISTROS
+    for distro in DISTROS + PREVIEW_DISTROS
 ]
 
 [
@@ -30,7 +35,11 @@ package(default_visibility = ["//visibility:public"])
         name = ("cc" if (not mode) else mode[1:]) + "_" + user + "_" + arch + "_" + distro,
         base = "//base" + (mode if mode else ":base") + "_" + user + "_" + arch + "_" + distro,
         tars = [
-            deb.package(arch, distro, "gcc-12-base"),
+            deb.package(
+                arch,
+                distro,
+                GCC_BASE[distro],
+            ),
             deb.package(arch, distro, "libgomp1"),
             deb.package(arch, distro, "libstdc++6"),
             deb.package(arch, distro, "libgcc-s1"),
@@ -45,5 +54,5 @@ package(default_visibility = ["//visibility:public"])
         "root",
         "nonroot",
     ]
-    for distro in DISTROS
+    for distro in DISTROS + PREVIEW_DISTROS
 ]
