add compression to cc
Signed-off-by: Appu Goundan <appu@google.com>

--- a/cc/BUILD
+++ b/cc/BUILD
@@ -5,9 +5,14 @@ load("//private/util:deb.bzl", "deb")
 
 package(default_visibility = ["//visibility:public"])
 
-GCC_BASE = {
-    "debian12": "gcc-12-base",
-    "debian13": "gcc-14-base",
+DISTRO_SPECIFIC_LIBRARIES = {
+    "debian12": [
+        "gcc-12-base",
+    ],
+    "debian13": [
+        "gcc-14-base",
+        "zlib1g",
+    ],
 }
 
 # An image for C/C++ programs
@@ -35,15 +40,10 @@ GCC_BASE = {
         name = ("cc" if (not mode) else mode[1:]) + "_" + user + "_" + arch + "_" + distro,
         base = "//base" + (mode if mode else ":base") + "_" + user + "_" + arch + "_" + distro,
         tars = [
-            deb.package(
-                arch,
-                distro,
-                GCC_BASE[distro],
-            ),
             deb.package(arch, distro, "libgomp1"),
             deb.package(arch, distro, "libstdc++6"),
             deb.package(arch, distro, "libgcc-s1"),
-        ],
+        ] + [deb.package(arch, distro, library) for library in DISTRO_SPECIFIC_LIBRARIES[distro]],
     )
     for mode in [
         "",
